<resources>
    <string name="app_name">LKTodayFINAL</string>
    <string name="login">Login</string>
    <string name="Password">Password</string>
    <string name="username">Username</string>
    <string name="logo">logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signuppassword">Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="welcome_to_myapp">Welcome to LkToday!</string>
    <string name="get_started">Get Started!</string>
    <string name="hiru_media_network_sweeps_iconic_awards_2025">Hiru media network sweeps iconic awards in 2025</string>
    <string name="sri_lanka_s_top_media_network_recognized_for_excellence_at_the_2025_iconic_awards">Sri Lanka\'s top media network recognized for excellence at the 2025 iconic awards</string>
    <string name="sri_lanka_set_to_host_england_in_a_thrilling_cricket_series_before_the_world_cup">Sri Lanka set to host england in a thrilling cricket series before the world cup</string>
    <string name="england_to_tour_sri_lanka_ahead_of_t20_world_cup_2026">England to tour Sri Lanka ahead of T20 world cup 2026</string>
    <string name="investigations_continue_as_officials_uncover_chilling_evidence_from_sri_lanka_s_civil_war_period">Investigations continue as officials uncover chilling evidence from Sri Lanka\'s civil war period</string>
    <string name="a_wartime_mass_grave_in_sri_lanka_yields_141_skeletons">Wartime mass grave in Sri Lanka yields 141 skeletons</string>
    <string name="lktoday">LkToday</string>
</resources>